feat: Add video sampler.
