# docs/swagger.json
@@ -9,7 +9,7 @@
     "paths": {
         "/api/v1/comment/add": {
             "post": {
-                "description": "Test API",
+                "description": "add comment",
                 "produces": [
                     "application/json"
                 ],
@@ -59,7 +59,7 @@
                 "tags": [
                     "comment"
                 ],
-                "summary": "CommentAction",
+                "summary": "delete comment",
                 "parameters": [
                     {
                         "description": "CommentDelParams",
@@ -95,7 +95,7 @@
         },
         "/api/v1/comment/list": {
             "get": {
-                "description": "Test API",
+                "description": "get comment list by videoId",
                 "produces": [
                     "application/json"
                 ],
@@ -104,6 +104,13 @@
                 ],
                 "summary": "CommentList",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "query video id",
+                        "name": "videoId",
+                        "in": "query",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "videoId",
@@ -136,7 +143,7 @@
         },
         "/api/v1/favorite/action": {
             "post": {
-                "description": "Test API",
+                "description": "like or dislike",
                 "produces": [
                     "application/json"
                 ],
@@ -177,21 +184,21 @@
                 }
             }
         },
-        "/api/v1/hots": {
+        "/api/v1/favorite/list": {
             "get": {
-                "description": "Test API",
+                "description": "get favorite video list",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "video"
+                    "favorite"
                 ],
-                "summary": "GetHots",
+                "summary": "GetFavoriteList",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "searchValue",
-                        "name": "searchValue",
+                        "description": "query user id",
+                        "name": "userId",
                         "in": "query",
                         "required": true
                     }
@@ -220,7 +227,7 @@
         },
         "/api/v1/login": {
             "post": {
-                "description": "Test API",
+                "description": "user login",
                 "produces": [
                     "application/json"
                 ],
@@ -230,7 +237,7 @@
                 "summary": "UserLogin",
                 "parameters": [
                     {
-                        "description": "UserParamsUserParams",
+                        "description": "UserParams",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -293,8 +300,40 @@
                 }
             }
         },
-        "/api/v1/qiniu/token": {
+        "/api/v1/qiniu/pfop/callback": {
             "get": {
+                "description": "Get QiNiu Pfop callback result",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "QiNiu"
+                ],
+                "summary": "GetPfopCallback",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/qiniu/token": {
+            "post": {
                 "description": "Get QiNiu upload token",
                 "produces": [
                     "application/json"
@@ -303,6 +342,17 @@
                     "QiNiu"
                 ],
                 "summary": "UserLogin",
+                "parameters": [
+                    {
+                        "description": "QiNiuTokenParams",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestparams.QiNiuTokenParams"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Success",
@@ -327,7 +377,7 @@
         },
         "/api/v1/register": {
             "post": {
-                "description": "Test API",
+                "description": "user register",
                 "produces": [
                     "application/json"
                 ],
@@ -337,7 +387,7 @@
                 "summary": "UserRegister",
                 "parameters": [
                     {
-                        "description": "UserParamsUserParams",
+                        "description": "UserParams",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -368,9 +418,91 @@
                 }
             }
         },
-        "/api/v1/search": {
+        "/api/v1/userinfo": {
             "get": {
-                "description": "Test API",
+                "description": "get userinfo by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "UserInfo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "query user id",
+                        "name": "userId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/video/hots": {
+            "get": {
+                "description": "hot list",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "video"
+                ],
+                "summary": "GetHots",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "searchValue",
+                        "name": "searchValue",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/video/search": {
+            "get": {
+                "description": "search videos by text",
                 "produces": [
                     "application/json"
                 ],
@@ -408,50 +540,22 @@
                     }
                 }
             }
-        },
-        "/api/v1/userinfo": {
-            "get": {
-                "description": "Test API",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "UserInfo",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "userId",
-                        "name": "userId",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "msg": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
+        "requestparams.CollectionParams": {
+            "type": "object",
+            "properties": {
+                "actionType": {
+                    "description": "1 点赞，-1 取消",
+                    "type": "integer"
+                },
+                "videoId": {
+                    "description": "UserID     string `json:userId`",
+                    "type": "integer"
+                }
+            }
+        },
         "requestparams.CommentAddParams": {
             "type": "object",
             "properties": {
@@ -481,6 +585,17 @@
                 "videoId": {
                     "description": "UserID     string `json:userId`",
                     "type": "integer"
+                }
+            }
+        },
+        "requestparams.QiNiuTokenParams": {
+            "type": "object",
+            "required": [
+                "ticket"
+            ],
+            "properties": {
+                "ticket": {
+                    "type": "string"
                 }
             }
         },
