# internal/params/request/qiniu.go
@@ -1,1 +1,5 @@
 package requestparams
+
+type QiNiuTokenParams struct {
+	Ticket string `json:"ticket" binding:"required"`
+}
